--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .headerHover {
+    @apply px-2 py-1 h-[80%] flex items-center border border-transparent hover:border-white cursor-pointer duration-100;
+  }
+}
